# sqlite3-cmake

./: CMakeLists.txt  sqlite-config.cmake.in
